Fixed casing in csproj file to allow mono build.

--- a/Bonsai.Design/Bonsai.Design.csproj
+++ b/Bonsai.Design/Bonsai.Design.csproj
@@ -145,7 +145,7 @@
     <Compile Include="TypeVisualizerDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TypeVisualizerDialog.designer.cs">
+    <Compile Include="TypeVisualizerDialog.Designer.cs">
       <DependentUpon>TypeVisualizerDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="VisualizerMashup.cs" />
