--- a/Bonsai/packages.config
+++ b/Bonsai/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ilmerge" version="3.0.29" targetFramework="net462" developmentDependency="True" />
+  <package id="ILMerge" version="3.0.29" targetFramework="net462" developmentDependency="True" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" developmentDependency="True" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net45" developmentDependency="True" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
