--- a/Bonsai.NuGet/Bonsai.NuGet.csproj
+++ b/Bonsai.NuGet/Bonsai.NuGet.csproj
@@ -1,186 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{73701CE6-B60F-4137-B277-EADCCD5AD1C3}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bonsai.NuGet</RootNamespace>
-    <AssemblyName>Bonsai.NuGet</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <UseWindowsForms>true</UseWindowsForms>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <TargetFramework>net472</TargetFramework>
+    <Version>2.5.0</Version>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
+    <PackageReference Include="Rx-Main" Version="2.2.5" />
+    <PackageReference Include="NuGet.Core" Version="2.14.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Bonsai.Design\Bonsai.Design.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="BonsaiMachineWideSettings.cs" />
-    <Compile Include="Constants.cs" />
-    <Compile Include="CueBannerComboBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="GalleryDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GalleryDialog.Designer.cs">
-      <DependentUpon>GalleryDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="LicenseAwarePackageManager.cs" />
-    <Compile Include="EventLogger.cs" />
-    <Compile Include="LogEventArgs.cs" />
-    <Compile Include="NativeMethods.cs" />
-    <Compile Include="PackageBuilderDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PackageBuilderDialog.Designer.cs">
-      <DependentUpon>PackageBuilderDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PackageDetails.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="PackageDetails.Designer.cs">
-      <DependentUpon>PackageDetails.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PackageHelper.cs" />
-    <Compile Include="PackageOperationDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PackageOperationDialog.Designer.cs">
-      <DependentUpon>PackageOperationDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="LicenseAcceptanceDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="LicenseAcceptanceDialog.Designer.cs">
-      <DependentUpon>LicenseAcceptanceDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PackageManagerDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PackageManagerDialog.Designer.cs">
-      <DependentUpon>PackageManagerDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PackagePageSelector.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="PackagePageSelector.Designer.cs">
-      <DependentUpon>PackagePageSelector.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PackageSourceConfigurationDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PackageSourceConfigurationDialog.Designer.cs">
-      <DependentUpon>PackageSourceConfigurationDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PackageView.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="PackageViewController.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\AssemblyInfo.Generated.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="PackageManagerProxy.cs" />
-    <Compile Include="QueryHelper.cs" />
-    <Compile Include="RequiringLicenseAcceptanceEventArgs.cs" />
-    <Compile Include="SaveFolderDialog.cs">
-      <SubType>Component</SubType>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="GalleryDialog.resx">
-      <DependentUpon>GalleryDialog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="LicenseAcceptanceDialog.resx">
-      <DependentUpon>LicenseAcceptanceDialog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PackageBuilderDialog.resx">
-      <DependentUpon>PackageBuilderDialog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PackageDetails.resx">
-      <DependentUpon>PackageDetails.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PackageOperationDialog.resx">
-      <DependentUpon>PackageOperationDialog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PackageManagerDialog.resx">
-      <DependentUpon>PackageManagerDialog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PackagePageSelector.resx">
-      <DependentUpon>PackagePageSelector.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PackageSourceConfigurationDialog.resx">
-      <DependentUpon>PackageSourceConfigurationDialog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Bonsai.Core\Bonsai.Core.csproj">
-      <Project>{e4d03ba3-54a2-4ff8-9dc6-52ba4cc14fed}</Project>
-      <Name>Bonsai.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Bonsai.Design\Bonsai.Design.csproj">
-      <Project>{765d928a-b147-46ff-8a59-bde73f88a844}</Project>
-      <Name>Bonsai.Design</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Web.Xdt">
-      <Version>2.1.1</Version>
-    </PackageReference>
-    <PackageReference Include="NuGet.Core">
-      <Version>2.14.0</Version>
-    </PackageReference>
-    <PackageReference Include="Rx-Main">
-      <Version>2.2.5</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildProjectDirectory)\..\MSBuild\AssemblyInfo.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
