--- a/Bonsai/Bonsai.csproj
+++ b/Bonsai/Bonsai.csproj
@@ -1,176 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F44C66DD-913A-4DF0-B617-F8C458533C50}</ProjectGuid>
+    <Title>Bonsai</Title>
+    <Description>A visual programming language for data stream processing built on top of Rx for .NET.</Description>
+    <PackageTags>Bonsai Rx Reactive Extensions</PackageTags>
+    <UseWindowsForms>true</UseWindowsForms>
+    <TargetFramework>net472</TargetFramework>
+    <Version>2.5.0</Version>
     <OutputType>Exe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bonsai</RootNamespace>
-    <AssemblyName>Bonsai</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
-    <TargetFrameworkProfile />
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <BuildPackage>true</BuildPackage>
-  </PropertyGroup>
-  <PropertyGroup>
     <ApplicationIcon>..\Bonsai.Editor\Bonsai.ico</ApplicationIcon>
-  </PropertyGroup>
-  <PropertyGroup>
     <ApplicationManifest>App.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="NuGet.Core" Version="2.14.0" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppResult.cs" />
-    <Compile Include="EditorFlags.cs" />
-    <Compile Include="ScriptExtensions.cs" />
-    <Compile Include="TempDirectory.cs" />
-    <Compile Include="GalleryPackagePathResolver.cs" />
-    <Compile Include="EditorResult.cs" />
-    <Compile Include="LoaderResource.cs" />
-    <Compile Include="CommandLineParser.cs" />
-    <Compile Include="DependencyInspector.cs" />
-    <Compile Include="Launcher.cs" />
-    <Compile Include="OverlayHelper.cs" />
-    <Compile Include="OverlayPackagePathResolver.cs" />
-    <Compile Include="PackageBuilderHelper.cs" />
-    <Compile Include="PackageConfigurationUpdater.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\AssemblyInfo.Generated.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="PropertyAssignment.cs" />
-    <Compile Include="ScriptExtensionsProvider.cs" />
-    <Compile Include="TypeVisualizerLoader.cs" />
-    <Compile Include="WorkflowElementCategoryConverter.cs" />
-    <Compile Include="WorkflowElementLoader.cs" />
+    <ProjectReference Include="..\Bonsai.Core\Bonsai.Core.csproj" />
+    <ProjectReference Include="..\Bonsai.Design\Bonsai.Design.csproj" />
+    <ProjectReference Include="..\Bonsai.Editor\Bonsai.Editor.csproj" />
+    <ProjectReference Include="..\Bonsai.NuGet\Bonsai.NuGet.csproj" PrivateAssets="all" />
+    <ProjectReference Include="..\Bonsai.Configuration\Bonsai.Configuration.csproj" PrivateAssets="all" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="App.manifest">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Bonsai.nuspec">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Bonsai.Configuration\Bonsai.Configuration.csproj">
-      <Project>{4ffce61a-e4d7-4dda-a276-4807e8f74635}</Project>
-      <Name>Bonsai.Configuration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Bonsai.Core\Bonsai.Core.csproj">
-      <Project>{e4d03ba3-54a2-4ff8-9dc6-52ba4cc14fed}</Project>
-      <Name>Bonsai.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Bonsai.Design\Bonsai.Design.csproj">
-      <Project>{765d928a-b147-46ff-8a59-bde73f88a844}</Project>
-      <Name>Bonsai.Design</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Bonsai.Editor\Bonsai.Editor.csproj">
-      <Project>{c7fdc11d-066a-4b2b-9a52-27a5e793befb}</Project>
-      <Name>Bonsai.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Bonsai.NuGet\Bonsai.NuGet.csproj">
-      <Project>{73701ce6-b60f-4137-b277-eadccd5ad1c3}</Project>
-      <Name>Bonsai.NuGet</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ilmerge.internalize.exclude.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\Bonsai.Editor\Bonsai.ico">
-      <Link>Bonsai.ico</Link>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="ILMerge">
-      <Version>3.0.29</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Web.Xdt">
-      <Version>2.1.1</Version>
-    </PackageReference>
-    <PackageReference Include="NuGet.Core">
-      <Version>2.14.0</Version>
-    </PackageReference>
-    <PackageReference Include="Rx-Linq">
-      <Version>2.2.5</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildProjectDirectory)\..\MSBuild\AssemblyInfo.targets" />
-  <Target Name="MergeExecutable" Inputs="$(OutputPath)\NuGet.Core.dll;$(OutputPath)\Bonsai.NuGet.dll;$(OutputPath)\Bonsai.Configuration.dll;$(OutputPath)\Bonsai.exe" Outputs="$(OutputPath)Merged\Bonsai.exe" Condition=" '$(OS)' == 'Windows_NT'">
-    <PropertyGroup>
-      <ILMergeInternalizeExcludeFile>$(MsBuildProjectDirectory)\ilmerge.internalize.exclude.txt</ILMergeInternalizeExcludeFile>
-      <ILMergeOutputFile>Bonsai.exe</ILMergeOutputFile>
-      <ILMergeOutputFilePath>$(OutputPath)Merged\$(ILMergeOutputFile)</ILMergeOutputFilePath>
-      <ILMergeCommandArgs>/internalize:"$(ILMergeInternalizeExcludeFile)" /target:exe /out:"Merged\$(ILMergeOutputFile)" /log:"Merged\ilmerge.msbuild.log" /allowDup $(ILMergeOutputFile) Bonsai.Configuration.dll Bonsai.NuGet.dll NuGet.Core.dll Microsoft.Web.XmlTransform.dll</ILMergeCommandArgs>
-      <ILMergeCommandArgs Condition=" '$(SignAssembly)' == 'true' ">/keyfile:"$(AssemblyOriginatorKeyFile)" /delaysign $(ILMergeCommandArgs)</ILMergeCommandArgs>
-    </PropertyGroup>
-    <ItemGroup>
-      <ILMergeOutputs Include="$(ILMergeOutputFilePath)" />
-      <ILMergeOutputs Include="$(OutputPath)Merged\Bonsai.pdb" />
-    </ItemGroup>
-    <MakeDir Directories="$(OutputPath)Merged" Condition="!Exists('$(OutputPath)Merged')" />
-    <Delete Files="@(ILMergeOutputs)" Condition="Exists($(ILMergeOutputFilePath))" />
-    <Exec Command="&quot;$(ILMergeConsolePath)&quot; $(ILMergeCommandArgs)" WorkingDirectory="$(OutputPath)" />
-    <Copy SourceFiles="@(ILMergeOutputs)" DestinationFolder="$(OutputPath)" />
-  </Target>
-  <PropertyGroup>
-    <BuildDependsOn>
-      $(BuildDependsOn);
-      MergeExecutable;
-    </BuildDependsOn>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
