Remove build output from starter pack

--- a/Bonsai.StarterPack/Bonsai.StarterPack.csproj
+++ b/Bonsai.StarterPack/Bonsai.StarterPack.csproj
@@ -4,6 +4,7 @@
     <Title>Bonsai - Starter Pack</Title>
     <Description>The Bonsai Starter Pack includes everything you need to build your own data processing workflows.</Description>
     <PackageTags>Bonsai Rx Starter Pack</PackageTags>
+    <IncludeBuildOutput>false</IncludeBuildOutput>
     <TargetFramework>net472</TargetFramework>
     <Version>2.5.0</Version>
   </PropertyGroup>
