Add default launch settings to project template

--- a/Bonsai.Templates/Bonsai.PackageTemplate/Bonsai.PackageTemplate.csproj
+++ b/Bonsai.Templates/Bonsai.PackageTemplate/Bonsai.PackageTemplate.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="launchSettings.json" />
     <None Include="Transform1.cs" />
   </ItemGroup>
   <ItemGroup>
