Update project template to target netstandard

--- a/Bonsai.Templates/Bonsai.PackageTemplate/ProjectTemplate.csproj
+++ b/Bonsai.Templates/Bonsai.PackageTemplate/ProjectTemplate.csproj
@@ -11,7 +11,7 @@
     <PackageOutputPath>..\bin\$(Configuration)</PackageOutputPath>
     <PackageTags>Bonsai Rx $projectname$</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Features>strict</Features>
     <Version>0.1.0</Version>
   </PropertyGroup>
