Fix #690: Correct embedded resources logical name

--- a/Bonsai.Shaders.Design/Bonsai.Shaders.Design.csproj
+++ b/Bonsai.Shaders.Design/Bonsai.Shaders.Design.csproj
@@ -20,4 +20,15 @@
   <ItemGroup>
     <Reference Include="System.Design" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Configuration\CollectionEditorControl.resx">
+      <LogicalName>Bonsai.Shaders.Configuration.Design.CollectionEditorControl.resources</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Configuration\ShaderCollectionEditorControl.resx">
+      <LogicalName>Bonsai.Shaders.Configuration.Design.ShaderCollectionEditorControl.resources</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Configuration\ShaderConfigurationEditorDialog.resx">
+      <LogicalName>Bonsai.Shaders.Configuration.Design.ShaderConfigurationEditorDialog.resources</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
