Fix package metadata in project template

--- a/Bonsai.Templates/Bonsai.PackageTemplate/ProjectTemplate.csproj
+++ b/Bonsai.Templates/Bonsai.PackageTemplate/ProjectTemplate.csproj
@@ -6,7 +6,7 @@
     <Authors>$registeredorganization$</Authors>
     <Copyright>Copyright © $registeredorganization$ $year$</Copyright>
     <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
-    <ProjectUrl></ProjectUrl>
+    <PackageProjectUrl></PackageProjectUrl>
     <PackageLicenseExpression></PackageLicenseExpression>
     <PackageIcon></PackageIcon>
     <PackageOutputPath>..\bin\$(Configuration)</PackageOutputPath>
