Disable WinExe inference to ensure console window

--- a/Bonsai/Bonsai.csproj
+++ b/Bonsai/Bonsai.csproj
@@ -8,6 +8,7 @@
     <TargetFramework>net472</TargetFramework>
     <Version>2.6.0</Version>
     <OutputType>Exe</OutputType>
+    <DisableWinExeOutputInference>true</DisableWinExeOutputInference>
     <ApplicationIcon>..\Bonsai.Editor\Bonsai.ico</ApplicationIcon>
     <ApplicationManifest>App.manifest</ApplicationManifest>
   </PropertyGroup>
