--- a/Bonsai.Shaders.Design/Bonsai.Shaders.Design.csproj
+++ b/Bonsai.Shaders.Design/Bonsai.Shaders.Design.csproj
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Title>Bonsai - Shaders Design Library</Title>
     <Description>Bonsai Design Library containing editor classes for shader configuration.</Description>
     <PackageTags>Bonsai Rx Shaders Design Graphics OpenGL</PackageTags>
-    <UseWindowsForms>true</UseWindowsForms>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>net5.0-windows10.0.19041</TargetFramework>
     <Version>0.25.0</Version>
   </PropertyGroup>
   <ItemGroup>
@@ -16,9 +15,6 @@
     <ProjectReference Include="..\Bonsai.Shaders\Bonsai.Shaders.csproj" />
     <ProjectReference Include="..\Bonsai.System.Design\Bonsai.System.Design.csproj" />
     <ProjectReference Include="..\Bonsai.System\Bonsai.System.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System.Design" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
