--- a/Bonsai.Vision.Design/Bonsai.Vision.Design.csproj
+++ b/Bonsai.Vision.Design/Bonsai.Vision.Design.csproj
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Title>Bonsai - Vision Design Library</Title>
     <Description>Bonsai Design Library containing visualizer and editor classes for image processing types.</Description>
     <PackageTags>Bonsai Rx Vision Visualizers</PackageTags>
-    <UseWindowsForms>true</UseWindowsForms>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>net5.0-windows10.0.19041</TargetFramework>
     <Version>3.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
