--- a/Bonsai.Windows.Input/Bonsai.Windows.Input.csproj
+++ b/Bonsai.Windows.Input/Bonsai.Windows.Input.csproj
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Title>Bonsai - Windows Input Library</Title>
     <Description>Bonsai Windows Library containing reactive interfaces to the standard operating system input devices.</Description>
     <PackageTags>Bonsai Rx Windows Input</PackageTags>
-    <UseWindowsForms>true</UseWindowsForms>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>net5.0-windows10.0.19041</TargetFramework>
     <Version>3.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
